compiler/test/conformance/invalid/inv_type_mismatch.tu
// INVÁLIDO (semântica leve): anotação Int com valor String
fn main() {
  let x: Int = "não é int"
  print(x)
}
